HTTP sampler (issue #27) (#169)
* initial scafolding for HTTP sampler
* fixed jacoco for integration tests